@@ -29,5 +29,8 @@ New branching rule. 20% with 0.9 cost_update_factor
 --- 30 dec full ---
 No custom branching
 --- 31 dec full 1 ---
-Always provide solutions
-
+Always provide solution hints
+--- 31 dec full 2 ---
+Solution hint parameter again.
+pscost history reset to 3
+--- 1 jan full 1 ---
